# django_referal_system

./: .isort.cfg  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  db.sqlite  manage.py  requirements.txt
backend/api/v1/: urls.py
backend/api/v1/auth/: serializers.py  tasks.py  urls.py  utils.py  views.py
backend/api/v1/drf_spectacular/: custom_decorators.py  serializers.py  view_decorators.py
backend/api/v1/drf_spectacular/auth/: view_decorators.py
backend/api/v1/drf_spectacular/users/: view_decorators.py
backend/api/v1/users/: serializers.py  urls.py  views.py
backend/referal_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/static/redoc/: redoc.yaml
backend/templates/auth/: signup.html
backend/templates/docs/: redoc.html
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
gateway/: nginx.conf
