[tool.poetry]
name = "django_referal_system"
version = "0.1.0"
description = ""
authors = ["aleksandrkomyagin <aleksandrkomyagin8@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
drf-spectacular = "^0.27.1"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
django-redis = "^5.4.0"
isort = "^5.13.2"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.35"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
eventlet = "^0.36.1"
smsru-api = "^0.1.7"


[tool.isort]
profile = "black"
quote-style = "double"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"